@@ -25,6 +25,7 @@ version 2.1.3.12
 - if you press alt or ctrl while drag selecting it doesnt stop selecting
 - some things that use the same sprites have been changed to have their editor preview to use a different frame (demon/spectre for example)
 - thing graphics are now square by default because the collision boxes in Doom engine games are actually square
+- handle bad plugins more gracefully (hopefully)
 
 version 2.1.3.10
 =====================
